# GraphicsHW

AlgHw/: CMakeLists.txt  main.cpp
FireworksHW1/: main.cpp
HW1_Fireworks/: CMakeLists.txt  Homework1.cpp
HW2/: CMakeLists.txt  Cube.cpp  Cube.h  main.cpp
HW5Final (1)/: Makefile
HW5Final (1)/libim/: im_complex.cpp  im_float.cpp  im_float_3d.h  im_short_3d.h
HW5Final/libim/: im_short.cpp
Homework4/: Coords.cpp  Coords.h  main.cpp
Homework6Ray/: CMakeLists.txt  ray_classes.cpp  ray_classes.h  ray_trace.cpp
Hw2Unbugged/: Cube.cpp  Cube.h  main.cpp
Hw3/: CMakeLists.txt  main.cpp  shading.cpp
Hw4/src/: Calculate.java
Project5/: CMakeLists.txt  Hw5.cpp  Makefile  README.txt  index.html  main  main.cpp  rectangle.txt  test  test (copy).cpp  test.cpp
Project5/libim/: im_color.cpp  im_short.h
RayTracing6/: Makefile  ray_classes.cpp  ray_classes.h
TestFiles/: CMakeLists.txt  main.cpp
testApp/: CMakeLists.txt  main.cpp  phong.cpp  phong.h  raytracing.cpp  raytracing.h  test.txt
